<resources>
    <string name="app_name">HealthHubAppV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Calendar">Calendar</string>
    <string name="menu_patient_records">Patient Records</string>
    <string name="menu_medication">Medication</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_menu_calendar">menu_calendar</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="van_den_berg">van den Berg</string>
    <string name="thom">Thom</string>
    <string name="wagenlaan_14">Wagenlaan 14</string>
    <string name="_9374_jm_groningen">9374 JM Groningen</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="mother">Mother</string>
    <string name="mevr_van_den_berg">Mevr. van den Berg</string>
    <string name="this_is_a_calendar_fragment">This is a calendar Fragment</string>
    <string name="name_thom">Name: Thom</string>
    <string name="lastname_van_den_berg">Lastname: van den Berg</string>
    <string name="address_wagenlaan_14">Address: Wagenlaan 14</string>
    <string name="father">Father;</string>
    <string name="mother1">Mother;</string>
    <string name="attending_physician">Attending physician;</string>
    <string name="_050_5078338">050 5078338</string>
    <string name="name_dr_visser">Name: Dr. Visser</string>
    <string name="_0623456987">0623456987</string>
    <string name="_050_5078338X">050 5078338</string>
    <string name="postcode_9374_jm_groningen">Postcode: 9374 JM Groningen</string>
    <string name="name_mevr_van_den_berg">Name: Mevr. van den Berg</string>
    <string name="name_dhr_van_den_berg">Name: Dhr. van den Berg</string>
    <string name="hospital_departments">Hospital departments;</string>
    <string name="_061234567">061234567</string>
    <string name="oncology">Oncology</string>
    <string name="your_messages_remain_here">Your messages remain here</string>
    <string name="medication">Medication:</string>
    <string name="type_of_medication_dacarbazine">Type of medication: Dacarbazine</string>
    <string name="iv_administration_15_to_30_minutes">IV administration: 15 to 30 minutes</string>
    <string name="side_effects_nausea_vomiting_loss_of_appetite">Side effects: Nausea, vomiting, loss of appetite</string>
    <string name="todo">TODO</string>
    <string name="thom_van_den_berg">Thom van den Berg</string>
    <string name="date_of_birth_12_09_2010">Date of Birth: 12–09–2010</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe left for register</string>
    <string name="login">login</string>
    <string name="logincaps">LOGIN</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="register">REGISTER</string>

</resources><!--Your comment-->