<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/menu_Calendar" />
        <item
            android:id="@+id/nav_patient_records"
            android:icon="@drawable/patient__6_"
            android:title="@string/menu_patient_records" />
        <item
            android:id="@+id/nav_medication"
            android:icon="@drawable/medicines"
            android:title="@string/menu_medication" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/chat"
            android:title="@string/menu_notifications" />
    </group>
</menu>
    <!--Your comment-->