<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patientrecords.PatientRecordsFragment">

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_thom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/lastname_van_den_berg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/date_of_birth_12_09_2010"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/address_wagenlaan_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDOB" />

    <TextView
        android:id="@+id/textViewPostCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/postcode_9374_jm_groningen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <TextView
        android:id="@+id/textViewMom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:text="@string/mother1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostCode" />

    <TextView
        android:id="@+id/textViewMomInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/name_mevr_van_den_berg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMom" />

    <TextView
        android:id="@+id/textViewMomPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/_061234567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMomInfo" />

    <TextView
        android:id="@+id/textViewDad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:text="@string/father"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMomPhone" />

    <TextView
        android:id="@+id/textViewDadPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/_0623456987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDadInfo" />

    <TextView
        android:id="@+id/textViewOnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/oncology"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDep" />

    <TextView
        android:id="@+id/textViewOncPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/_050_5078338X"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnc" />

    <TextView
        android:id="@+id/textViewGP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:text="@string/attending_physician"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDadPhone" />

    <TextView
        android:id="@+id/textViewGPName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/name_dr_visser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGP" />

    <TextView
        android:id="@+id/textViewGPPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/_050_5078338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGPName" />

    <TextView
        android:id="@+id/textViewDep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_departments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGPPhone" />

    <TextView
        android:id="@+id/textViewDadInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/name_dhr_van_den_berg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDad" />

    <TextView
        android:id="@+id/text_patient_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOncPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--Your comment-->