<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.medication.MedicationFragment">

    <TextView
        android:id="@+id/text_medication"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="372dp"
        android:layout_marginBottom="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/medication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:text="@string/type_of_medication_dacarbazine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMeds" />

    <TextView
        android:id="@+id/textViewIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:text="@string/iv_administration_15_to_30_minutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewEffects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:text="@string/side_effects_nausea_vomiting_loss_of_appetite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIV" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--Your comment-->